Fix showcase image visibility with position absolute and z-index (temp debug enabled)

--- a/style.css
+++ b/style.css
@@ -699,6 +699,7 @@ footer:not(.minimal-footer) {
 }
 
 .jg-showcase__item {
+    position: relative;
     flex: 0 0 auto;
     width: clamp(180px, 18vw, 260px);
     height: clamp(270px, 32vw, 380px);
@@ -716,13 +717,20 @@ footer:not(.minimal-footer) {
 }
 
 .jg-showcase__img {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
+    opacity: 1;
+    visibility: visible;
+    z-index: 1;
     user-select: none;
     -webkit-user-drag: none;
+    /* TEMP DEBUG */ outline: 3px solid red; background: lime;
 }
 
 /* Edge fade overlays */
